Added version of maven jar plugin.

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
               </manifest>
           </archive>
       </configuration>
+      <version>2.4</version>
     </plugin>
   </plugins>
   </build>
