--- a/.syntastic_javac_config
+++ b/.syntastic_javac_config
@@ -1,4 +1,4 @@
-D:\\m2\\repository\\junit\\junit\\4.10\\junit-4.10.jar
-D:\\m2\\repository\\org\\hamcrest\\hamcrest-core\\1.1\\hamcrest-core-1.1.jar
-target\\classes
-target\\test-classes
+D:/programs/maven/m2/repository/junit/junit/4.10/junit-4.10.jar
+D:/programs/maven/m2/repository/org/hamcrest/hamcrest-core/1.1/hamcrest-core-1.1.jar
+D:/javacompiler/target/classes
+D:/javacompiler/target/test-classes
